@@ -16,7 +16,6 @@ gem 'jbuilder', '~> 2.5'
 
 gem 'bootstrap-sass', '~> 3.3.6'
 gem 'font-awesome-rails'
-gem 'jquery-rails'
 gem 'webpacker'
 
 group :development, :test do
